# depict

./: .gitignore  BUILD_APPROACHES.md  BUILD_SYSTEM.md  COMPLETE_BUILD_GUIDE.md  Cargo.lock.backup  Cargo.toml  Complete_Setup_Instructions.md  DOCKER_IMAGE_BUILD.md  Dockerfile  Dockerfile.bak  Dockerfile.working  How Depict Web works  README-ffi.md  README_FORK.md  WORKING_NIGHTLIES.txt  add_date_cache_key.sh  build-docker-build.sh  build-docker-image.yml  build.bak  build.bak1  build.sh  build_depict_wf.yml  change_dockerfile-nightly-2004-11-01  copy_build_depict_wf.yml  dbuild-flutter.sh  dbuild.sh  deploy.sh  diagnose-workspace.sh  diagnose.sh  docker-build.bak  docker-build.sh  docker-compose.yml  docker-dev.sh  docker-flutter.sh  docker_build_U22.04.sh  docker_build_U22.04_on_host.sh  dockerfile  fast-build.yml  fix-all-build-issues.sh  fix-and-build.sh  (+9 more)
.github/workflows/: 1.12_test_build_depict_wf.yml  CI_CD_Build_all  README.md  build-and-test.yml  build-depict-wf.yml  build-release.yml  build-with-docker-image.yml  build_depict_wf.yml  check-build.yml  create-release.yml  debug_build_depict_wf.yml  desktop-release.yml  manual-ruff-lint-apply-fixes.yml  test.yml  web-release.yml  workflow_lint.yml
build_20251213_172341/: run-server.sh
depict_flutter/: pubspec.yaml
depict_flutter/lib/: main.dart
depict_flutter/lib/ffi/: depict.dart  depict_ffi_bindings.dart
depict_flutter/test/: ffi_probe_test.dart  ffi_render_test.dart
dioxus/src/: About Dioxus.md
ffi/: Cargo.toml
ffi/src/: lib.rs
scripts/: copy_depict_ffi.sh
server/: Cargo.toml
server/src/: main.rs
src/: From text to Pixels.md  graph_drawing.rs  lib.rs
tests/: makefile  pyproject.toml  test_harness_v1.py  test_harness_v8.py
web/: Cargo.toml  Trunk.toml
web/src/: main.rs  main.rs.bak  readme.md
