[package]
name = "depict"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Picture systems, tell stories"
documentation = "https://docs.rs/depict"
homepage = "https://github.com/mstone/depict"
repository = "https://github.com/mstone/depict"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["osqp-rust"]
osqp-rust = ["dep:osqp-rust", "dep:osqp"]
osqp = ["dep:osqp"]
desktop = ["interprocess/tokio_support", "serde", "serde/derive"]
server = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]
client = ["petgraph/serde-1", "serde", "serde/derive", "serde_json"]

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"

[dependencies]
anyhow = { version = "1" }
colorous = { version = "1" }
derive_more = "0.99"
dioxus = { version = "0.3", optional = true }
enum-kinds = "0.5.1"
factorial = "0.4"
include_dir = "0.7"
itertools = "0.10"
logos = "0.12"
ordered-float = "3"
petgraph = "0.6"
pomelo = { version = "0.1" }
self_cell = "0.10.2"
sorted-vec = "0.7"
svg = "0.10"
thiserror = "1.0"
typed-index-collections = "3.0"

serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }


# Non-WASM targets (desktop, server)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
osqp = { version = "0.6", optional = true }

# WASM targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.3"

# osqp-rust: Custom fork with WASM-compatible bindings that don't require
# native C compilation via cmake/clang. The standard osqp crate uses osqp-sys
# which attempts to compile C code and fails for WASM targets.

osqp-rust = { version = "0.6", optional = true, git = "https://github.com/mstone/osqp.rs" }


# client
[target.'cfg(all(target_arch = "wasm32", target_os="unknown", target_vendor="unknown"))'.dependencies]
web-sys = { version = "0.3.4", features = [ "Window", "Performance", "PerformanceTiming" ] }

# depended on by dioxus-*; tokio_support feature is needed to fix "cargo doc", but must not be set on wasm32-unknown-unknown
[target.'cfg(not(all(target_arch = "wasm32", target_os="unknown", target_vendor="unknown")))'.dependencies]
interprocess = { version = "1", optional = true }


[lib]
name = "depict"
path = "src/lib.rs"

[workspace]
members = [
  "dioxus",
  #"objc",
  "parse",
  "server",
  "tikz",
  "web",
]

[profile.release]
#debug = 1
debug = true
split-debuginfo = "packed"
#split-debuginfo = "unpacked"
#incremental = true
strip = "none"

